--- a/graphhopper/web/src/main/resources/assets/index.html
+++ b/graphhopper/web/src/main/resources/assets/index.html
@@ -50,6 +50,7 @@
 
                     </span>
         </div>
+        <!--
         <form id="locationform">
             <div class="time_input">
                 <input id="input_date_0" class="flatpickr input_date" type="text" placeholder="Select Date &amp; Time"/>
@@ -63,6 +64,7 @@
         <div id="export-link" class="left"><a href="/maps"><img src='img/link.png'></a></div>
         <div id="gpxExportButton"><a href=""><img alt="gpx" src='img/gpx.png'></a></div>
         <div id="hosting">Powered by <a href='https://www.graphhopper.com/products/'>GraphHopper API</a></div>
+        -->
     </div>
     <div class ="GPX">
         <div id ="file">
@@ -73,7 +75,7 @@
                 <option value="NULL">null</option>
             </select>
             <br>
-            <button id="rawTrajectory"> Display Raw Trajectory</button>
+            <button id="rawTrajectory"> Display History Trajectory</button>
             <button id="selectFile"> Select GPX File for Training </button>
         </div>
         <!--
@@ -95,7 +97,7 @@
             <button id = "clear_route"> Clear </button>
             <button id = "display_stay">Display Stay</button>
             <button id ="trajectory"> Display Trajectory </button>
-            <button id ="expTrajectory"> Experiment Trajectory </button>
+            <button id ="expTrajectory"> Experiment Raw Trajectory </button>
         </div>
         <div id = service>
             <br>
